# TSKITetude

./: .buildinfo  .dockerignore  .gitignore  .gitpod.yml  00-quickstart.html  01-getting_started.html  02-tsinfer.html  03-smarter_database.html  04-tsinfer_with_test_data.html  05-tstree-smarter.html  06-nucleotide-diversity.html  07-about_tstree_space.html  08-test_sample-vcf.html  09-smarter_50k.html  10-ensembl-compara.html  11-smarter_50K_results.html  Dockerfile  Makefile  README.md  TODO.md  genindex.html  install.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/: Dockerfile  bashrc  codespaces.Dockerfile  gitpod.Dockerfile
.github/workflows/: docker.yml
_sources/: 01-getting_started.ipynb  03-smarter_database.ipynb  04-tsinfer_with_test_data.ipynb  10-ensembl-compara.ipynb  install.md
_sources/install/: install.md
_sources/notebooks/: 00-quickstart.ipynb  02-tsinfer.ipynb  03-smarter_database.ipynb  04-tsinfer_with_test_data.ipynb  06-nucleotide-diversity.ipynb  08-test_sample-vcf.ipynb  09-smarter_50k.ipynb  11-smarter_50K_results.ipynb  12-population-statistics.ipynb  14-inspect_simulations.ipynb  15-smarter_samples_list.ipynb  16-different-mutation-rates.ipynb  17-simulated_dataset.ipynb  17-simulated_dataset.md  18-explore-metadata.ipynb  19-threads_fit-data.ipynb
config/: 50K_simulations.json  AME_50K.json  IDF_HD.json  custom.config  samples_toInfer-reference.json  samples_toInfer-threads-fit.json  samples_toInfer-threads.json  samples_toInfer.csv  samples_toInfer.demo  samples_toInfer.json  smarter-sheeps.json
docs/: 00-quickstart.ipynb  01-getting_started.ipynb  02-tsinfer.ipynb  03-smarter_database.ipynb  04-tsinfer_with_test_data.ipynb  05-tstree-smarter.ipynb  06-nucleotide-diversity.ipynb  07-about_tstree_space.ipynb  08-test_sample-vcf.ipynb  09-smarter_50k.ipynb  10-ensembl-compara.ipynb  11-smarter_50K_results.ipynb  _config.yml  _toc.yml  intro.md  references.bib
docs/install/: build-docs.md  install.md
docs/notebooks/: 00-quickstart.ipynb  01-getting_started.ipynb  02-tsinfer.ipynb  03-smarter_database.ipynb  04-tsinfer_with_test_data.ipynb  05-tstree-smarter.ipynb  08-test_sample-vcf.ipynb  09-smarter_50k.ipynb  12-population-statistics.ipynb  13-population-statistic_plots.ipynb  14-inspect_simulations.ipynb  16-different-mutation-rates.ipynb  17-simulated_dataset.ipynb  17-simulated_dataset.md  18-add_metadata_to_threads_ts.ipynb  18-explore-metadata.ipynb  19-threads_fit-data.ipynb
docs/running/: smarter-database.md
install/: build-docs.html  install.html
notebooks/: 00-quickstart.html  00-quickstart.ipynb  01-getting_started.html  01-getting_started.ipynb  02-tsinfer.html  02-tsinfer.ipynb  03-smarter_database.html  03-smarter_database.ipynb  04-tsinfer_with_test_data.html  04-tsinfer_with_test_data.ipynb  05-tstree-smarter.html  05-tstree-smarter.ipynb  06-nucleotide-diversity.html  06-nucleotide-diversity.ipynb  07-about_tsree_space.ipynb  07-about_tstree_space.html  07-about_tstree_space.ipynb  08-test_sample-vcf.html  08-test_sample-vcf.ipynb  09-smarter_50k.html  09-smarter_50k.ipynb  10-ensembl-compara.html  10-ensembl-compara.ipynb  11-smarter_50K_results.html  11-smarter_50K_results.ipynb  12-population-statistics.html  14-inspect_simulations.html  15-smarter_samples_list.html  16-different-mutation-rates.html  17-simulated_dataset.html  18-explore-metadata.html  19-threads_fit-data.html
running/: smarter-database.html
scripts/: 50K_simulations.sh  50K_simulations_compara.sh  50K_simulations_reference.sh  createFID-IID.py  fakeFastaFromVCF.py  getSNPnames.py  simulation-tsm100M300I.sh  top2forward.py
tests/: test_helper.py  test_helper_annotate_tree.py  test_helper_create_tstree.py
tskit-pipeline/: main.nf  modules.json  nextflow.config  nextflow_schema.json
tskit-pipeline/conf/: base.config  modules.config  test.config
tskit-pipeline/lib/: WorkflowMain.groovy  WorkflowTskit.groovy
tskit-pipeline/modules/cnr-ibba/estsfs/: main.nf
tskit-pipeline/modules/local/: estsfs_input.nf  estsfs_output.nf  plink_subset.nf  tsinfer.nf
tskit-pipeline/modules/nf-core/estsfs/: main.nf
tskit-pipeline/tests/: test_dataset.bed  test_dataset.bim  test_dataset.fam  test_dataset.tsv  test_outgroup.tsv
tskit-pipeline/workflows/: tskit.nf
tskitetude/: __init__.py  cli.py  ensembl.py  estsfs.py  helper.py  smarterapi.py
