[tool.poetry]
name = "tskitetude"
version = "0.4.0"
description = ""
authors = ["Paolo Cozzi <bunop@libero.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.10"
tskit = "^0.5.6"
msprime = "^1.3.0"
matplotlib = "^3.8.2"
nbstripout = "^0.6.1"
nbconvert = "^7.14.2"
tsinfer = "^0.3.1"
tsdate = "^0.1.7"
ipywidgets = "^8.1.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
cyvcf2 = "^0.30.28"
click = "^8.1.7"
plinkio = {git = "https://github.com/bunop/libplinkio.git", rev = "bc1c13507cf5c2d60ffe20e12a1997021f37ceb4"}
pickleshare = "^0.7.5"
tsqc = {git = "https://github.com/tskit-dev/tsqc"}
dask = {extras = ["dataframe"], version = "^2024.4.2"}
click-option-group = "^0.5.6"
seaborn = "^0.13.2"
pyensemblrest = "^0.2.3"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}

[tool.poetry.scripts]
make_est_sfs_input = "tskitetude.estsfs:make_est_sfs_input"
parse_est_sfs_output = "tskitetude.estsfs:parse_est_sfs_output"
create_tstree = "tskitetude.helper:create_tstree"
collect_compara_ancestors = "tskitetude.ensembl:collect_compara_ancestors"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."tskitetude/__init__.py"]
