[tool.poetry]
name = "tskitetude"
version = "0.5.1"
description = "A toolkit for working with tree sequence data, including utilities for simulation, analysis, and visualization."
authors = ["Paolo Cozzi <bunop@libero.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tskit = "^0.6.0"
tsinfer = "0.3.3"
tsdate = "^0.2.1"
click = "^8.1.7"
cyvcf2 = "^0.31.1"
click-option-group = "^0.5.6"
cairosvg = "^2.7.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyterlab = "^4.0.10"
msprime = "^1.3.0"
matplotlib = "^3.8.2"
nbstripout = "^0.6.1"
nbconvert = "^7.14.2"
ipywidgets = "^8.1.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
plinkio = {git = "https://github.com/bunop/libplinkio.git", rev = "bc1c13507cf5c2d60ffe20e12a1997021f37ceb4"}
pickleshare = "^0.7.5"
dask = {extras = ["dataframe"], version = "^2024.4.2"}
seaborn = "^0.13.2"
pyensemblrest = "^0.2.3"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
jupyter-book = "^1.0.2"
ghp-import = "^2.1.0"
tsbrowse = {git = "https://github.com/tskit-dev/tsbrowse.git"}
lets-plot = "^4.4.1"

[tool.poetry.scripts]
make_est_sfs_input = "tskitetude.estsfs:make_est_sfs_input"
parse_est_sfs_output = "tskitetude.estsfs:parse_est_sfs_output"
create_tstree = "tskitetude.helper:create_tstree"
collect_compara_ancestors = "tskitetude.ensembl:collect_compara_ancestors"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."tskitetude/__init__.py"]
